# artifacts/api-server/src/routes/index.ts
@@ -4,6 +4,7 @@ import authRouter from "./auth";
 import gamesRouter from "./games";
 import membersRouter from "./members";
 import forumRouter from "./forum";
+import leaderboardRouter from "./leaderboard";
 
 const router: IRouter = Router();
 
@@ -12,5 +13,6 @@ router.use(authRouter);
 router.use(gamesRouter);
 router.use(membersRouter);
 router.use(forumRouter);
+router.use(leaderboardRouter);
 
 export default router;
